[gd_scene load_steps=46 format=4 uid="uid://bjxart0083r2e"]

[ext_resource type="Script" uid="uid://6c3amxrhrt06" path="res://scripts/salon/salon.gd" id="1_o351e"]
[ext_resource type="Texture2D" uid="uid://e41tvwpti1lr" path="res://assets/sol/pixilart-drawing(2).png" id="2_r2ubq"]
[ext_resource type="Script" uid="uid://ci6e1yq5r3qrp" path="res://scripts/liste_objets.gd" id="3_fn1w0"]
[ext_resource type="AudioStream" uid="uid://db351d17gu0mw" path="res://musique/door_opening.ogg" id="3_y1q0v"]
[ext_resource type="AudioStream" uid="uid://johqbx3tpyhk" path="res://musique/magasin_background.mp3" id="4_sn8n4"]
[ext_resource type="AudioStream" uid="uid://2cgu5caxdtib" path="res://musique/people_talking.mp3" id="5_4ergh"]
[ext_resource type="Script" uid="uid://boujxh0nhxyey" path="res://scripts/object.gd" id="5_r7tc6"]
[ext_resource type="AudioStream" uid="uid://dioknkfs7vb5c" path="res://musique/background.mp3" id="6_4f3jj"]
[ext_resource type="Texture2D" uid="uid://m7n8mw4mpqg" path="res://assets/meubles/salon/table_basse.png" id="7_grcyl"]
[ext_resource type="Texture2D" uid="uid://bkfg2vsa855e0" path="res://assets/meubles/salon/TV.png" id="8_j5h6y"]
[ext_resource type="Texture2D" uid="uid://ydhufwqkbucn" path="res://assets/meubles/salon/canape_salon.png" id="9_0i7ja"]
[ext_resource type="Texture2D" uid="uid://dce8rsvn1suq2" path="res://assets/meubles/salle_de_bain/fenetre.png" id="10_6kxxx"]
[ext_resource type="Texture2D" uid="uid://fu2hjkp4lob8" path="res://assets/meubles/salon/grand_tableau.png" id="12_k61po"]
[ext_resource type="PackedScene" uid="uid://bidemcih0p3dj" path="res://scenes/menu.tscn" id="12_lcohu"]
[ext_resource type="Texture2D" uid="uid://dos8xi5x8o1qw" path="res://assets/meubles/salon/grande_lampe.png" id="14_j0541"]
[ext_resource type="Texture2D" uid="uid://b458s3x8k41v3" path="res://assets/meubles/salon/bibliotheque.png" id="15_f2pph"]
[ext_resource type="Texture2D" uid="uid://deupc6t5d1cvq" path="res://assets/meubles/salon/petit_tableau1.png" id="16_0i7ja"]
[ext_resource type="Texture2D" uid="uid://cjpq0k5faeei8" path="res://assets/meubles/salon/petit_tableau2.png" id="17_jfpqx"]
[ext_resource type="Texture2D" uid="uid://cu3oj3qnwp4fv" path="res://assets/meubles/salon/tapis.png" id="18_lrh2t"]
[ext_resource type="PackedScene" uid="uid://1slb4ng5gwih" path="res://scenes/magasin.tscn" id="18_vqeng"]
[ext_resource type="Texture2D" uid="uid://blqwy4bg6x3qi" path="res://assets/meubles/salon/plante.png" id="19_47c6u"]
[ext_resource type="PackedScene" uid="uid://bjqgfx63o5avc" path="res://scenes/perso_1.tscn" id="19_fn1w0"]
[ext_resource type="Texture2D" uid="uid://cedn6ter4t1ta" path="res://assets/meubles/salon/fauteuil.png" id="20_claj4"]
[ext_resource type="Script" uid="uid://86xs8jxdfdb4" path="res://scripts/murs.gd" id="20_t4i3p"]
[ext_resource type="Texture2D" uid="uid://1qsqbymmy0m7" path="res://assets/temp/lamp.png" id="21_0i7ja"]
[ext_resource type="Texture2D" uid="uid://dikdnwydmu3c6" path="res://assets/meubles/salle_de_bain/rideaux.png" id="22_udyk5"]
[ext_resource type="Texture2D" uid="uid://cmkt6h41orsgd" path="res://assets/mur/mur_beige.png" id="24_ggknf"]
[ext_resource type="Texture2D" uid="uid://b5jrwbm0aw8p8" path="res://assets/mur/mur_bordeaux.png" id="25_18j04"]
[ext_resource type="Texture2D" uid="uid://bxodl4f0c5x3e" path="res://assets/mur/mur_vert1.png" id="26_u7km5"]
[ext_resource type="Script" uid="uid://bgujil4oqkot6" path="res://scripts/broken_object.gd" id="27_sn8n4"]
[ext_resource type="Script" uid="uid://dami3u2og2fjb" path="res://magasin.gd" id="31_j5h6y"]
[ext_resource type="Texture2D" uid="uid://bx436t0o824jd" path="res://assets/temp/broken_clock.png" id="32_0i7ja"]
[ext_resource type="Texture2D" uid="uid://djw3gqbcyhoau" path="res://assets/temp/dust1.png" id="32_j5h6y"]
[ext_resource type="Texture2D" uid="uid://dos3isfllrblk" path="res://assets/temp/dust2.png" id="33_0i7ja"]
[ext_resource type="Texture2D" uid="uid://2ukl7jojfy5x" path="res://assets/temp/clock.png" id="35_0i7ja"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mnvgm"]
texture = ExtResource("2_r2ubq")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vqeng"]
tile_size = Vector2i(70, 70)
sources/0 = SubResource("TileSetAtlasSource_mnvgm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhhld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mexdd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbtbg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gj30g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43rvo"]

[sub_resource type="Animation" id="Animation_8l67y"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("32_0i7ja")]
}

[sub_resource type="Animation" id="Animation_e7jy0"]
resource_name = "reparer"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("32_j5h6y"), ExtResource("33_0i7ja"), ExtResource("32_j5h6y"), ExtResource("35_0i7ja")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmsjd"]
_data = {
&"RESET": SubResource("Animation_8l67y"),
&"reparer": SubResource("Animation_e7jy0")
}

[node name="salon" type="Node2D" node_paths=PackedStringArray("Personnages")]
script = ExtResource("1_o351e")
Personnages = NodePath("perso")

[node name="camera2D" type="Camera2D" parent="."]
position = Vector2(37, -5)
zoom = Vector2(0.78, 0.78)

[node name="sol" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD3/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD4//7/AAAAAAAAAAD5//7/AAAAAAAAAAD6////AAAAAAAAAAD7////AAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAD4//3/AAAAAAAAAAD5//3/AAAAAAAAAAD6//3/AAAAAAAAAAD7//3/AAAAAAAAAAD8//3/AAAAAAAAAAD9//3/AAAAAAAAAAD+//3/AAAAAAAAAAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAP3/AAAAAAAAAAAHAP3/AAAAAAAAAAAIAP3/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wQAAAAAAAAAAAD5/wQAAAAAAAAAAAD4/wQAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wQAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wEAAAAAAAAAAAD3/wAAAAAAAAAAAAD3////AAAAAAAAAAD3/wEAAAAAAAAAAAD4/wAAAAAAAAAAAAD4////AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wAAAAAAAAAAAAD7//7/AAAAAAAAAAD5/wMAAAAAAAAAAAD5/wIAAAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wAAAAAAAAAAAAD+////AAAAAAAAAAD+//7/AAAAAAAAAAD9////AAAAAAAAAAD9//7/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wIAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAP7/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAAEAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAP7/AAAAAAAAAAAFAAIAAAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAP7/AAAAAAAAAAAIAP7/AAAAAAAAAAAHAP7/AAAAAAAAAAAGAP7/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAD6//7/AAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAJAPz/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_vqeng")

[node name="songs" type="Node" parent="."]

[node name="porte" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("3_y1q0v")

[node name="magasinBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("4_sn8n4")

[node name="talkingPeople" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("5_4ergh")

[node name="mainBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("6_4f3jj")

[node name="meublesBase" type="Node" parent="."]

[node name="tableBasse" type="Sprite2D" parent="meublesBase"]
position = Vector2(-319, -42)
scale = Vector2(0.466, 0.466)
texture = ExtResource("7_grcyl")

[node name="tv" type="Sprite2D" parent="meublesBase"]
z_index = 1
position = Vector2(-325, -214)
scale = Vector2(3.7285714, 3.7285714)
texture = ExtResource("8_j5h6y")

[node name="canape" type="Sprite2D" parent="meublesBase"]
z_index = -1
position = Vector2(-550, 21)
scale = Vector2(4.55714, 4.55714)
texture = ExtResource("9_0i7ja")

[node name="fenetre" type="Sprite2D" parent="meublesBase"]
position = Vector2(-312, -361)
scale = Vector2(0.15462185, 0.15462185)
texture = ExtResource("10_6kxxx")

[node name="listeObjets" type="Node2D" parent="."]
script = ExtResource("3_fn1w0")

[node name="bigPainting" type="Sprite2D" parent="listeObjets"]
position = Vector2(-533, -299)
scale = Vector2(0.890625, 0.890625)
texture = ExtResource("12_k61po")
script = ExtResource("5_r7tc6")

[node name="grandeLampe" type="Sprite2D" parent="listeObjets"]
position = Vector2(-601, -198)
scale = Vector2(0.20944, 0.20944)
texture = ExtResource("14_j0541")
script = ExtResource("5_r7tc6")

[node name="bibliotheque" type="Sprite2D" parent="listeObjets"]
position = Vector2(-10, -286)
scale = Vector2(4, 4)
texture = ExtResource("15_f2pph")
script = ExtResource("5_r7tc6")

[node name="smallPainting1" type="Sprite2D" parent="listeObjets"]
position = Vector2(170, -209)
scale = Vector2(1.625, 1.625)
texture = ExtResource("16_0i7ja")
script = ExtResource("5_r7tc6")

[node name="smallPainting2" type="Sprite2D" parent="listeObjets"]
position = Vector2(-90, -292)
scale = Vector2(0.858397, 0.858397)
texture = ExtResource("17_jfpqx")
script = ExtResource("5_r7tc6")

[node name="carpet" type="Sprite2D" parent="listeObjets"]
position = Vector2(94, -23)
texture = ExtResource("18_lrh2t")
script = ExtResource("5_r7tc6")

[node name="plant" type="Sprite2D" parent="listeObjets"]
position = Vector2(-554, 221)
texture = ExtResource("19_47c6u")
script = ExtResource("5_r7tc6")

[node name="armchair" type="Sprite2D" parent="listeObjets"]
position = Vector2(-130, -58)
texture = ExtResource("20_claj4")
script = ExtResource("5_r7tc6")

[node name="lampe" type="Sprite2D" parent="listeObjets"]
z_index = 2
position = Vector2(-301.00003, -104)
scale = Vector2(1.6874998, 1.6874998)
texture = ExtResource("21_0i7ja")
script = ExtResource("5_r7tc6")

[node name="rideaux" type="Sprite2D" parent="listeObjets"]
z_index = 1
position = Vector2(-311, -334.00003)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("22_udyk5")
script = ExtResource("5_r7tc6")

[node name="murs" type="Node2D" parent="."]
position = Vector2(0, -4)
script = ExtResource("20_t4i3p")

[node name="mur1" type="Sprite2D" parent="murs"]
z_index = -1
position = Vector2(36.999992, -315)
scale = Vector2(2.8828125, 0.41015628)
texture = ExtResource("24_ggknf")

[node name="mur2" type="Sprite2D" parent="murs"]
visible = false
z_index = -1
position = Vector2(37.5, -315)
scale = Vector2(2.8847656, 0.41015625)
texture = ExtResource("25_18j04")

[node name="mur3" type="Sprite2D" parent="murs"]
visible = false
z_index = -2
position = Vector2(37.000046, -315)
scale = Vector2(2.8828125, 0.41015625)
texture = ExtResource("26_u7km5")

[node name="perso" type="Node2D" parent="."]

[node name="perso1" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("19_fn1w0")]
position = Vector2(-129, 42)
ListeObjets = NodePath("../../listeObjets")

[node name="perso2" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("19_fn1w0")]
position = Vector2(-398, 222)
ListeObjets = NodePath("../../listeObjets")

[node name="perso3" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("19_fn1w0")]
position = Vector2(76, 200)
ListeObjets = NodePath("../../listeObjets")

[node name="menu" parent="." instance=ExtResource("12_lcohu")]
z_index = 3
offset_left = 361.0
offset_top = -402.0
offset_right = 361.0
offset_bottom = -402.0

[node name="store" parent="." instance=ExtResource("18_vqeng")]
visible = false
z_index = 10
position = Vector2(-689, -419)
script = ExtResource("31_j5h6y")

[node name="brokenObject" type="Node2D" parent="."]
z_index = 3
position = Vector2(166, -430)
script = ExtResource("27_sn8n4")

[node name="objetCasse" type="Button" parent="brokenObject"]
z_index = 1
offset_right = 256.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bhhld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mexdd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbtbg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gj30g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_43rvo")
flat = true

[node name="btnReparer" type="Button" parent="brokenObject/objetCasse"]
visible = false
top_level = true
layout_mode = 0
offset_left = 143.0
offset_top = -329.0
offset_right = 157.0
offset_bottom = -313.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20

[node name="marginContainer" type="MarginContainer" parent="brokenObject"]
offset_right = 256.0
offset_bottom = 256.0
mouse_filter = 2

[node name="textureRect" type="TextureRect" parent="brokenObject/marginContainer"]
z_index = -3
layout_mode = 2
mouse_filter = 2
texture = ExtResource("32_0i7ja")

[node name="animationRepare" type="AnimationPlayer" parent="brokenObject/marginContainer/textureRect"]
unique_name_in_owner = true
root_node = NodePath("../../../objetCasse")
libraries = {
&"": SubResource("AnimationLibrary_rmsjd")
}

[connection signal="pressed" from="brokenObject/objetCasse" to="brokenObject" method="_on_objet_casse_pressed"]
[connection signal="pressed" from="brokenObject/objetCasse/btnReparer" to="." method="_on_btn_reparer_pressed"]
